public abstract class Building extends PlaceableEntity {

    public Building(String name) {
        super(name, "Building");
    }

}